[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/world4/boss.png" type="Texture" id=1]
[ext_resource path="res://scripts/final_enemy.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 3.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( -1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -32, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 6 ), Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFontData" id=6]
font_path = "res://assets/ui/minimal_5x7.ttf"

[sub_resource type="DynamicFont" id=7]
size = 15
font_data = SubResource( 6 )

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="CircleShape2D" id=9]

[node name="FinalEnemy" type="KinematicBody2D"]
script = ExtResource( 2 )
health = 15
speed = 45
knockback = 45
damage = 45
coin_amount = 50

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 80, 80 )
polygon = PoolVector2Array( -38.3755, -59.1719, 41.5986, -60.9557, 72.518, -40.7392, 29.5, 77.75, -30.25, 77.75, -72.8625, -39.8473 )

[node name="SpriteHolder" type="Node2D" parent="."]
scale = Vector2( 5, 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="SpriteHolder"]
frames = SubResource( 2 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpriteHolder/AnimatedSprite"]
anims/death = SubResource( 3 )
anims/flip = SubResource( 4 )
anims/hurt = SubResource( 5 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( 0, 8 )
scale = Vector2( 20, 18 )
rect = Rect2( 0, 0, 8, 8 )
pause_animations = false
freeze_bodies = false
pause_particles = false
pause_animated_sprites = false

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 0, 8 )
scale = Vector2( 20, 18 )
rect = Rect2( 0, 0, 8, 8 )

[node name="HitArea" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="HitArea"]
position = Vector2( 80, 80 )
scale = Vector2( 1.01, 1.01 )
polygon = PoolVector2Array( -40, -72, 40, -72, 80, -40, 32, 80, -32, 80, -80, -40 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 6.0
one_shot = true
autostart = true

[node name="RayCastFloor" type="RayCast2D" parent="."]
position = Vector2( 175, 152 )
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 4

[node name="RayCastWall" type="RayCast2D" parent="."]
position = Vector2( 80, 136 )
enabled = true
cast_to = Vector2( 85, 0 )
collision_mask = 6

[node name="Label" type="Label" parent="."]
visible = false
margin_top = -15.0
margin_right = 40.0
margin_bottom = -1.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 0 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label"]
anims/label = SubResource( 8 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 79.16, 151.239 )
shape = SubResource( 9 )
